--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
   
     
-  "start": "npm start",
+  "start": "nodemon index.js",
   
     
   "test": "echo \"Error: no test specified\" && exit 1"
